<resources>
    <string name="app_name">Github Users</string>
    <string name="detail_name">User Detail</string>
    <string name="app_logo">Application Logo</string>
    <string name="app_avatar">Avatar Image</string>
    <string name="app_username">Username</string>
    <string name="app_user_name">Name</string>
    <string name="app_type">Type</string>
    <string name="app_follower">Followers</string>
    <string name="app_following">Following</string>
    <string name="app_company">Company</string>
    <string name="app_location">Location</string>
    <string name="app_repository">Repository</string>
    <string name="search_hint">Enter User Name</string>
    <string name="followers">%d Followers</string>
    <string name="following">%d Following</string>
    <string name="not_found">Not Found</string>
    <string name="menu_1">Search</string>
    <string name="menu_2">Switch Language</string>
    <string name="content_tab_text">Tab</string>
    <string name="powered">Powered by GitHub API</string>
    <string name="api_error">Cannot get data from API</string>
    <string name="favorite_menu">Add to Favorite</string>
    <string name="add_favorite">Added to Favorite User</string>
    <string name="remove_favorite">Removed from Favorite User</string>
    <string name="settings">Settings</string>
    <string name="favorite_user">Favorite User</string>
    <string name="img_start">Image start searching first</string>
    <string name="tv_start">Start Searching First</string>
    <string name="empty_favorite_user">Empty Favorite User</string>
    <string name="image_empty_favorite_user">Image Empty Favorite User</string>
    <string name="option_general">General</string>
    <string name="language">Switch Language</string>
    <string name="option_about">About</string>
    <string name="owner">Alwan Fauzi</string>
    <string name="image_user_favorite">Image User Favorite</string>
    <string name="user_favorite">User Favorite</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="version">Version 1.3.0 - Created by Alwan Fauzi</string>
</resources>