<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:id="@+id/detail_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_detail_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_avatar"
                tools:src="@drawable/avatar" />

            <TextView
                android:id="@+id/tv_detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_username"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/text_detail" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/app_user_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:textColor="@color/text_detail" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/tv_detail_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_follower"
                android:textColor="@color/text_detail" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="19dp"
                android:layout_marginStart="5dp"
                android:background="@color/text_detail" />

            <TextView
                android:id="@+id/tv_detail_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/app_following"
                android:textColor="@color/text_detail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/tv_detail_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:gravity="center_horizontal"
                android:text="@string/app_company"
                android:textColor="@color/text_detail"
                app:drawableStartCompat="@drawable/ic_company" />

            <TextView
                android:id="@+id/tv_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawablePadding="2dp"
                android:gravity="center_horizontal"
                android:text="@string/app_location"
                android:textColor="@color/text_detail"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/tv_detail_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawablePadding="2dp"
                android:gravity="center_horizontal"
                android:text="@string/app_repository"
                android:textColor="@color/text_detail"
                app:drawableStartCompat="@drawable/ic_repository" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="4dp"
            android:background="@color/bg_detail"
            android:contentDescription="@string/content_tab_text"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorHeight="4dp"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>